--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.14.0",
     "mongoose": "^4.6.8",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "uuid": "^3.0.0"
   }
 }
