--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.6.8",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "uuid": "^3.0.0"
+    "uuid": "^3.0.0",
+    "winston": "^2.3.0"
   }
 }
